Archive2/6b/8ef05af3f794f3/output
main.cpp: In instantiation of 'struct B<D<float> >':
main.cpp:8:8:   required from 'struct D<float>'
main.cpp:15:11:   required from here
main.cpp:4:36: error: no type named 'Type' in 'struct D<float>'
     typedef typename Derived::Type Type;
                                    ^
main.cpp: In function 'int main()':
main.cpp:15:11: warning: unused variable 'd' [-Wunused-variable]
  D<float> d;
           ^
