Archive2/6b/8ef05af3f794f3/main.cpp
template <typename Derived>
struct B
{
    typedef typename Derived::Type Type;
};

template <typename T>
struct D : B< D<T> >
{
    typedef T Type;
};

int main()
{
	D<float> d;
}